Fix <iframe> weird vertical stretch in responsive mode

--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -80,4 +80,9 @@
 		@include rem(padding, 12px 0 0);
 	}
 
+	.hentry {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+
 }
